--- a/Gentle-Introduction-to-Chi-square-test-for-independence.ipynb
+++ b/Gentle-Introduction-to-Chi-square-test-for-independence.ipynb
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +952,7 @@
        "11.344866730144373"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1003,6 +1003,13 @@
     "\n",
     "$H_0:$ Two variables are independent.\n",
     "$H_1:$ Two variables are dependent."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Chi-square test requires to state the null hypothesis, H<sub>0</sub>, and the alternative hypothesis, H<sub>1</sub>. The null hypothesis is the statement that our two variables are independent. The alternative hypothesis is the statement that they are not independent. "
    ]
   },
   {
@@ -1128,8 +1135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alternatively we can compare p-value and the level of siginificance.\n",
-    "If `p-value < the level of significance`, we reject the null hypotheses."
+    "Alternatively, we can compare the p-value and the level of significance. If p-value < the level of significance, we reject the null hypothesis."
    ]
   },
   {
@@ -1160,20 +1166,6 @@
     "else:\n",
     "\tprint(\"\"\"At %.2f level of significance, we accept the null hypotheses. \n",
     "They are independent.\"\"\" % (significance))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Conclusion"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Once you know how to extract data from the CSV file, it is reasonably easy to find Chi-square, p-value, degree of freedom and critical value."
    ]
   },
   {
