--- a/Gentle-Introduction-to-Chi-square-test-for-independence.ipynb
+++ b/Gentle-Introduction-to-Chi-square-test-for-independence.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Gentle Introduction to Chi square test for independence"
+    "# Gentle Introduction to Chi square test for independence\n",
+    "\n",
+    "## Beginners guide to Chi-square using Jupyter Notebook"
    ]
   },
   {
@@ -26,6 +28,7 @@
     "- Importing data, vertical and horizontal data, Pandas.DataFrame.transpose()\n",
     "- Critical values\n",
     "- The null and alternative hypotheses\n",
+    "- Conclusion\n",
     "- Reference"
    ]
   },
@@ -1166,6 +1169,20 @@
     "else:\n",
     "\tprint(\"\"\"At %.2f level of significance, we accept the null hypotheses. \n",
     "They are independent.\"\"\" % (significance))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this article, I explained the basics of the Chi-square test using Jupyter Notebook. The null and alternative hypotheses, expected values, Chi-square values, p-value, degree of freedom and critical value are required for the Chi-square test for independence."
    ]
   },
   {
