--- a/Gentle-Introduction-to-Chi-square-test-for-independence.ipynb
+++ b/Gentle-Introduction-to-Chi-square-test-for-independence.ipynb
@@ -1127,10 +1127,10 @@
     "print('chi=%.6f, critical value=%.6f\\n' % (chi, critical_value))\n",
     "\n",
     "if chi > critical_value:\n",
-    "\tprint(\"\"\"At %.2f level of significance, we reject the null hypotheses and accept H1. \n",
+    "    print(\"\"\"At %.2f level of significance, we reject the null hypotheses and accept H1. \n",
     "They are not independent.\"\"\" % (significance))\n",
     "else:\n",
-    "\tprint(\"\"\"At %.2f level of significance, we accept the null hypotheses. \n",
+    "    print(\"\"\"At %.2f level of significance, we accept the null hypotheses. \n",
     "They are independent.\"\"\" % (significance))"
    ]
   },
@@ -1164,10 +1164,10 @@
     "print('p-value=%.6f, significance=%.2f\\n' % (pval, significance))\n",
     "\n",
     "if pval < significance:\n",
-    "\tprint(\"\"\"At %.2f level of significance, we reject the null hypotheses and accept H1. \n",
+    "    print(\"\"\"At %.2f level of significance, we reject the null hypotheses and accept H1. \n",
     "They are not independent.\"\"\" % (significance))\n",
     "else:\n",
-    "\tprint(\"\"\"At %.2f level of significance, we accept the null hypotheses. \n",
+    "    print(\"\"\"At %.2f level of significance, we accept the null hypotheses. \n",
     "They are independent.\"\"\" % (significance))"
    ]
   },
