--- a/Beginners-Guide-to-the-Chi-square-Goodness-of-Fit-Test.ipynb
+++ b/Beginners-Guide-to-the-Chi-square-Goodness-of-Fit-Test.ipynb
@@ -185,6 +185,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Chi-square test of goodness-of-fit used in Biology\n",
+    "  http://www.biostathandbook.com/chigof.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
