--- a/Discover_the_strength_of_monotonic_relation.ipynb
+++ b/Discover_the_strength_of_monotonic_relation.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# Discover the strength of monotonic relation\n",
     "\n",
-    "## Finding Spearman’s rank correlation coefficient using Python for IB Diploma Mathematics\n",
+    "## Finding Spearman’s rank correlation coefficient using Jupyter Notebook\n",
     "\n",
     "\n",
     "In this article, I will show the necessary steps using Python to find Spearman's rank correlation coefficient.\n",
@@ -924,7 +924,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
