Modelling functions added

--- a/Beginners_Guide_to_the_Chi_square_Goodness_of_Fit_Test.ipynb
+++ b/Beginners_Guide_to_the_Chi_square_Goodness_of_Fit_Test.ipynb
@@ -17,10 +17,7 @@
     "\n",
     "- Introduction\n",
     "- Null and Alternative Hypothesis\n",
-    "- Groupby How to group categorical data using Iris data\n",
-    "- DFE\n",
-    "- DDD\n",
-    "- DDD"
+    "- How to group categorical data \n"
    ]
   },
   {
@@ -190,6 +187,13 @@
    "source": [
     "- Chi-square test of goodness-of-fit used in Biology\n",
     "  http://www.biostathandbook.com/chigof.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- http://www.biostathandbook.com/exactgof.html"
    ]
   },
   {
