--- a/Slides/Modelling_functions_slides.ipynb
+++ b/Slides/Modelling_functions_slides.ipynb
@@ -65,6 +65,9 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
+    "year=np.array([1980,1982,1984,1986,1988,1990,1992,1994,1996,1998,2000])\n",
+    "co2=np.array([338.7,341.1,344.4,347.2,351.5,354.2,356.4,358.9,362.6,366.6,369.4])\n",
+    "\n",
     "plt.scatter(year,co2,label='CO2')\n",
     "plt.title(\"Year vs CO2\")\n",
     "plt.xlabel('Year')\n",
