--- a/Modelling_functions.ipynb
+++ b/Modelling_functions.ipynb
@@ -39,6 +39,10 @@
    "source": [
     "# Linear models\n",
     "\n",
+    "$\n",
+    "y=mx+c\n",
+    "$\n",
+    "\n",
     "The first one is a linear model. A linear model is express as $y=mx+c$.\n",
     "We are going to use [numpy.array](https://docs.scipy.org/doc/numpy/reference/generated/numpy.array.html) or [numpy.arange](https://docs.scipy.org/doc/numpy/reference/generated/numpy.arange.html?highlight=arange#numpy.arange) to create data. If you want to read more about linear relationship, please read [A Measure of Linear Relationship](https://towardsdatascience.com/a-measure-of-linear-relationship-5dd4a995ee7e?source=friends_link&sk=a68b5bc35334e5a501ead9900f0ea5db).\n",
     "\n",
@@ -442,6 +446,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$\n",
+    "y=ax^2+bx+c\n",
+    "$\n",
+    "\n",
     "We use Numpy's `arange` to create 10 integers from 0 to 9."
    ]
   },
@@ -1337,6 +1345,10 @@
     "\n",
     "## Semi-log models\n",
     "\n",
+    "$\n",
+    "Y=A+Bx, A=ln(y), \n",
+    "$\n",
+    "\n",
     "Generally, we use the semi-log model for an exponential function. The following shows how to convert an exponential function to a linear function by taking a natural log.\n"
    ]
   },
@@ -1695,7 +1707,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "$\n",
+    "y=\\frac{L}{1+Ce^{-kx}}, L,k,C>0\n",
+    "$\n"
+   ]
   },
   {
    "cell_type": "code",
