--- a/Modelling_functions.ipynb
+++ b/Modelling_functions.ipynb
@@ -1751,13 +1751,24 @@
    "source": [
     "## Practice\n",
     "\n",
-    "Using [the table below](https://niwa.co.nz/education-and-training/schools/resources/climate/modelling), draw a scatter plot and find cosine regression function."
+    "Using [the table below](https://niwa.co.nz/education-and-training/schools/resources/climate/modelling), draw a scatter plot and find cosine regression function.\n",
+    "\n",
+    "<center><img src=\"image/practicetable.png\"></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Answer"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
