--- a/Modelling_functions.ipynb
+++ b/Modelling_functions.ipynb
@@ -1497,54 +1497,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Practice\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 1  2  3  4  5  6  7  8  9 10 11]\n",
-      "[17.1 17.6 15.7 15.2 13.3 11.  10.7 10.3 12.  13.7 13.1]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Answer\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Log-log models\n",
     "\n",
     "Log-log model is used for a power function.\n",
@@ -1653,6 +1605,54 @@
     "\n",
     "print(f'The equation of regression line is ln(y)={p[0]:.3f} * ln(x) + {p[1]:.3f}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Practice\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  2  3  4  5  6  7  8  9 10 11]\n",
+      "[17.1 17.6 15.7 15.2 13.3 11.  10.7 10.3 12.  13.7 13.1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Answer\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1823,7 +1823,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You may have different coefficients. I used `p0=[4,0.5,1,10]`."
+    "You may have different coefficients. I used `p0=[4,0.5,1,10]`. You can find [my solution here](https://github.com/shinokada/python-for-ib-diploma-mathematics/blob/master/Modelling_functions.ipynb)."
    ]
   },
   {
