--- a/Beginners_Guide_to_Jupyter_Notebook.ipynb
+++ b/Beginners_Guide_to_Jupyter_Notebook.ipynb
@@ -104,6 +104,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Jupyter Help and Shortcuts\n",
+    "\n",
+    "Pressing `h` toggles the keyboards shortcuts screen. You can see all commands by pressing &#8984;&#8679;f. I use the following shortcuts often and it will be useful if you can memorize them.\n",
+    "\n",
+    "Symbol | Name\n",
+    "---------|-----\n",
+    "&#8984; | Command, Cmd \n",
+    "&#8963; |Control, Ctl\n",
+    "&#8997; |Option Opt \n",
+    "&#8679; |Shift \n",
+    "&#8617; |Retrun\n",
+    "&#9251; |Space\n",
+    "&#8677; |Tab  \n",
+    "\n",
+    "\n",
+    "Shortcut | Function\n",
+    "---------|---------\n",
+    "&#8679;&#8617; | Run cell and select below\n",
+    "&#8963;&#8617; | Run selected cells\n",
+    "&#8997;&#8617; | Run cell and insert below\n",
+    "m | Change cell to markdown\n",
+    "y | Change cell to code\n",
+    "h | Toggle help\n",
+    "&#8984;&#8679;f | Open the command palette\n",
+    "a | Insert cell above\n",
+    "b | Insert cell below\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Python libraries\n",
     "\n",
     "[Numpy](https://docs.scipy.org/doc/numpy/reference/) and [Pandas](https://pandas.pydata.org/pandas-docs/stable/index.html) are two of the most used libraries in scientific computing, Data science, and machine learning. Pandas is built on top of Numpy. Both offer similar functions. \n",
