--- a/Markdown_Latex_Essay_Writing_with_Jupyter_Notebook.ipynb
+++ b/Markdown_Latex_Essay_Writing_with_Jupyter_Notebook.ipynb
@@ -45,9 +45,17 @@
     "\n",
     "[Markdown is a lightweight markup language with plain-text-formatting syntax.](https://en.wikipedia.org/wiki/Markdown)\n",
     "\n",
-    "[Markdown basics](https://markdown-guide.readthedocs.io/en/latest/basics.html#markdown-basics)\n",
+    "## How to change the cell to markdown\n",
     "\n",
-    "## How to change the cell to markdown"
+    "One way you can \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "## [Markdown basics](https://markdown-guide.readthedocs.io/en/latest/basics.html#markdown-basics)\n",
+    "\n"
    ]
   },
   {
