--- a/Beginners_Guide_to_Jupyter_Notebook.ipynb
+++ b/Beginners_Guide_to_Jupyter_Notebook.ipynb
@@ -23,6 +23,7 @@
     "\n",
     "- Introduction\n",
     "- Installing Anaconda\n",
+    "- Jupyter Notebook Help and Shortcuts\n",
     "- Python libraries\n",
     "- Finding data\n",
     "- Data attributes\n",
@@ -104,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Jupyter Help and Shortcuts\n",
+    "# Jupyter Notebook Help and Shortcuts\n",
     "\n",
     "Pressing `h` toggles the keyboards shortcuts screen. You can see all commands by pressing &#8984;&#8679;f. I use the following shortcuts often and it will be useful if you can memorize them.\n",
     "\n",
