--- a/Markdown_Latex_Essay_Writing_with_Jupyter_Notebook.ipynb
+++ b/Markdown_Latex_Essay_Writing_with_Jupyter_Notebook.ipynb
@@ -17,18 +17,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "$y=\\frac{L}{1+Ce^{-kx}}, L,k,C>0$\n"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "$$y=\\frac{L}{1+Ce^{-kx}}, L,k,C>0$$"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -47,30 +47,114 @@
     "\n",
     "## How to change the cell to markdown\n",
     "\n",
-    "One way you can \n",
+    "One way you can a cell to markdown is selecting Markdown from a dropdown.\n",
     "\n",
+    "![select markdown](./image/markdown.png)\n",
     "\n",
+    "Second way is to use a shortcut, `m` after selecting a cell. You may need to press escape if you are typing `m` in the cell.\n",
     "\n",
+    "## Headers\n",
     "\n",
+    "Use `#` for H1, `##` for H2 etc.\n",
     "\n",
+    "```\n",
+    "# Main title\n",
+    "## Sub title\n",
+    "```\n",
     "\n",
-    "## [Markdown basics](https://markdown-guide.readthedocs.io/en/latest/basics.html#markdown-basics)\n",
-    "\n"
+    "The above will print out the following.\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Main title\n",
+    "## Sub title"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## List\n",
+    "\n",
+    "- main 1\n",
+    "  - sub 1\n",
+    "  - sub 2\n",
+    "- main 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Latex"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$y=\\frac{L}{1+Ce^{-kx}}, L,k,C>0$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$y=\\frac{L}{1+Ce^{-kx}}, L,k,C>0$$"
+   ]
   },
   {
    "cell_type": "code",
