--- a/Essential_List_for_Essay_Writing_with_Jupyter_Notebook.ipynb
+++ b/Essential_List_for_Essay_Writing_with_Jupyter_Notebook.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Markdown, Latex, Essay Writing with Jupyter Notebook\n",
+    "# Essential List for Essay Writing with Jupyter Notebook\n",
     "\n",
     "* Introduction\n",
     "* Markdown\n",
     "* Latex\n",
-    "* Essay writing\n",
+    "* Printing PDF\n",
     "\n",
     "# Introduction\n",
     "\n",
-    "In this article, I will "
+    "In this article, I will cover must-know items for your essay writing using Jupyter Notebook. "
    ]
   },
   {
@@ -39,17 +39,14 @@
     "```\n",
     "# Main title\n",
     "## Sub title\n",
+    "### H3 title\n",
     "```\n",
     "\n",
-    "The above will print out the following.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "The above will print out the following.\n",
+    "\n",
     "# Main title\n",
-    "## Sub title"
+    "## Sub title\n",
+    "### H3 title\n"
    ]
   },
   {
@@ -58,65 +55,138 @@
    "source": [
     "## List\n",
     "\n",
+    "You can use * or - to create an unordered list. You can use numbers for an ordered list.\n",
     "\n",
+    "```\n",
+    "- main 1\n",
+    "  - sub 1\n",
+    "  - sub 2\n",
+    "- main 2\n",
+    "- main 3\n",
+    "\n",
+    "1. Main list 1\n",
+    "2. Main list 2\n",
+    "  - Sub list 2-1\n",
+    "  - Sub list 2-2\n",
+    "3. Main list 3\n",
+    "```\n",
+    "\n",
+    "The above produces the followings.\n",
     "\n",
     "- main 1\n",
     "  - sub 1\n",
     "  - sub 2\n",
-    "- main 2"
+    "- main 2\n",
+    "- main 3\n",
+    "\n",
+    "\n",
+    "1. Main list 1\n",
+    "2. Main list 2\n",
+    "  - Sub list 2-1\n",
+    "  - Sub list 2-2\n",
+    "3. Main list 3"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "## Link"
+    "## Link\n",
+    "\n",
+    "You need to use `[Link name](url)` for links.\n",
+    "\n",
+    "```\n",
+    "[Google](https://www.google.com)\n",
+    "```\n",
+    "\n",
+    "The above code produces,[Google](https://www.google.com).\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "## Image"
+    "## Image\n",
+    "\n",
+    "You need to use `![alt text](link)` for images.\n",
+    "\n",
+    "```\n",
+    "![alt text here](https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png \"Logo Title Text 1\")\n",
+    "```\n",
+    "\n",
+    "The above markdown produces: ![alt text](https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png \"Logo Title Text 1\").\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "## Table"
+    "## Tables\n",
+    "\n",
+    "To add a table, use three or more hyphens (---) to create each column’s header, and use pipes (|) to separate each column. You can optionally add pipes on either end of the table.\n",
+    "\n",
+    "```\n",
+    "| Syntax      | Description |\n",
+    "| ----------- | ----------- |\n",
+    "| Header      | Title       |\n",
+    "| Paragraph   | Text        |\n",
+    "\n",
+    "```\n",
+    "\n",
+    "The rendered output looks like this:\n",
+    "\n",
+    "\n",
+    "| Syntax      | Description |\n",
+    "| ----------- | ----------- |\n",
+    "| Header      | Title       |\n",
+    "| Paragraph   | Text        |"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "source": [
+    "If you want to know more, please read [this page](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Latex"
+    "# Latex\n",
+    "\n",
+    "[LaTeX](https://en.wikipedia.org/wiki/LaTeX) is widely used in academia for the communication and publication of scientific documents in many fields.\n",
+    "\n",
+    "\n",
+    "Notation | Symbols | Example\n",
+    "---------------|:-----------------:|-------------\n",
+    "Fractions | `\\frac{}{}` | $P(A)=\\frac{n(A)}{n(U)}$\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "## Superscript and subscript\n",
+    "\n",
+    "\n",
+    "## Limit\n",
+    "\n",
+    "\n",
+    "## Laten letters\n",
+    "\n",
+    "\n",
+    "## Sigma notation\n",
+    "\n",
+    "\n",
+    "## Integration\n",
+    "\n",
+    "\n",
+    "## Matrix\n",
+    "\n",
+    "\n",
+    "## Text\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -136,7 +206,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -161,7 +233,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "For more information about LaTeX, please see [this link](https://www.overleaf.com/learn/latex/Integrals,_sums_and_limits)."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -193,19 +267,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# References\n",
     "\n",
     "- https://markdown-guide.readthedocs.io/en/latest/basics.html#markdown-basics\n",
+    "- https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet\n",
+    "- https://www.markdownguide.org/extended-syntax/\n",
+    "\n",
     "\n"
    ]
   }
