--- a/Essentials_for_Scientific_Writing_with_Jupyter_Notebook.ipynb
+++ b/Essentials_for_Scientific_Writing_with_Jupyter_Notebook.ipynb
@@ -4,16 +4,87 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Essential List for Essay Writing with Jupyter Notebook\n",
+    "# Essentials for Scientific Writing with Jupyter Notebook\n",
     "\n",
     "* Introduction\n",
+    "* Theme\n",
     "* Markdown\n",
     "* Latex\n",
     "* Printing PDF\n",
     "\n",
     "# Introduction\n",
     "\n",
-    "In this article, I will cover must-know items for your essay writing using Jupyter Notebook. "
+    "In this article, I will cover must-know items for your scientific writing using Jupyter Notebook. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Theme\n",
+    "\n",
+    "Well, a theme is not a skill, but before we start our Jupyter journey, we need a eye pleasing theme. A nice Jupyter theme for your Jupyter Notebook is like a nice pillow for your sleep. You are going to spend a lot of time writing with Jupyter Notebook, let's find a nice theme for your taste and modify font sizes. We need to take care of our eyes. \n",
+    "\n",
+    "Let's install [JupyterThemes](https://github.com/dunovank/jupyter-themes). Open your terminal and type the followings.\n",
+    "\n",
+    "```\n",
+    "# install jupyterthemes\n",
+    "pip install jupyterthemes\n",
+    "\n",
+    "# upgrade to latest version\n",
+    "pip install --upgrade jupyterthemes\n",
+    "```\n",
+    "\n",
+    "There are nine themes, chesterish, grade3, ggruvboxd, gruvboxl, monokai, oceans16, onedork, solarizedd, solarizedl. \n",
+    "\n",
+    "![chesterish](./image/themes/chesterish.png)|![grade3](./image/themes/grade3.png)|![gruvboxd](./image/themes/gruvboxd.png)\n",
+    "-|-|-\n",
+    "chesterish | grade3 |gruvboxd\n",
+    "\n",
+    "![gruvboxl](./image/themes/gruvboxl.png)|![monokai](./image/themes/monokai.png)|![ocean16](./image/themes/ocean16.png)\n",
+    "-|-|-\n",
+    "gruvboxl|monokai|ocean16\n",
+    "\n",
+    "![onedork](./image/themes/onedork.png)|![solarizedd](./image/themes/solarizedd.png)|![solarizedl](./image/themes/solarizedl.png)\n",
+    "-|-|-\n",
+    "ondork|solarizedd|solarizedl\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "If you want to use ocean16, you can change your theme in a cell by typing and hit shift+enter.\n",
+    "\n",
+    "```\n",
+    "!jt -t oceans16\n",
+    "```\n",
+    "\n",
+    "If you want to reset the theme.\n",
+    "\n",
+    "```\n",
+    "!jt -r\n",
+    "```\n",
+    "\n",
+    "## Font & Fontsize\n",
+    "\n",
+    "The following image shows the position of fonts. \n",
+    "![Jupyter theme font](./image/tf1.png)\n",
+    "\n",
+    "The following image shows the font size.\n",
+    "![Jupyter theme fontsize](./image/tf.png)\n",
+    "\n",
+    "If you want to change the text cell font and fontsize you can type the following in a cell and hit shift+enter.\n",
+    "\n",
+    "```\n",
+    "jt -t oceans16 -tf merriserif -tfs 14 -nf ptsans -nfs 14\n",
+    "```\n",
+    "\n",
+    "You can find [all font types here](https://github.com/dunovank/jupyter-themes#monospace-fonts-code-cells).\n",
+    "\n",
+    "Currently, I am using the following setting.\n",
+    "\n",
+    "```\n",
+    "jt -t grade3 -tfs 13 -mathfs 110 -fs 13 -N -T\n",
+    "```"
    ]
   },
   {
@@ -34,19 +105,28 @@
     "\n",
     "## Headers\n",
     "\n",
-    "Use `#` for H1, `##` for H2 etc.\n",
-    "\n",
-    "```\n",
+    "Use `#` for H1, `##` for H2 etc."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
     "# Main title\n",
     "## Sub title\n",
-    "### H3 title\n",
-    "```\n",
+    "### H3 title"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "The above will print out the following.\n",
     "\n",
     "# Main title\n",
     "## Sub title\n",
-    "### H3 title\n"
+    "### H3 title"
    ]
   },
   {
@@ -55,9 +135,13 @@
    "source": [
     "## List\n",
     "\n",
-    "You can use * or - to create an unordered list. You can use numbers for an ordered list.\n",
-    "\n",
-    "```\n",
+    "You can use * or - to create an unordered list. You can use numbers for an ordered list."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
     "- main 1\n",
     "  - sub 1\n",
     "  - sub 2\n",
@@ -68,9 +152,13 @@
     "2. Main list 2\n",
     "  - Sub list 2-1\n",
     "  - Sub list 2-2\n",
-    "3. Main list 3\n",
-    "```\n",
-    "\n",
+    "3. Main list 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The above produces the followings.\n",
     "\n",
     "- main 1\n",
@@ -93,13 +181,22 @@
    "source": [
     "## Link\n",
     "\n",
-    "You need to use `[Link name](url)` for links.\n",
+    "You need to use `[Link name](url)` for links."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "[Google](https://www.google.com)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
-    "```\n",
-    "[Google](https://www.google.com)\n",
-    "```\n",
-    "\n",
-    "The above code produces,[Google](https://www.google.com).\n"
+    "The above code produces,[Google](https://www.google.com)."
    ]
   },
   {
@@ -108,11 +205,20 @@
    "source": [
     "## Image\n",
     "\n",
-    "You need to use `![alt text](link)` for images.\n",
-    "\n",
-    "```\n",
-    "![alt text here](https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png \"Logo Title Text 1\")\n",
-    "```\n",
+    "You need to use `![alt text](link)` for images.\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "![alt text here](https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png \"Logo Title Text 1\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "The above markdown produces: ![alt text](https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png \"Logo Title Text 1\").\n",
     "\n"
@@ -125,15 +231,23 @@
     "## Tables\n",
     "\n",
     "To add a table, use three or more hyphens (---) to create each column’s header, and use pipes (|) to separate each column. You can optionally add pipes on either end of the table.\n",
-    "\n",
-    "```\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
     "| Syntax      | Description |\n",
     "| ----------- | ----------- |\n",
     "| Header      | Title       |\n",
-    "| Paragraph   | Text        |\n",
-    "\n",
-    "```\n",
-    "\n",
+    "| Paragraph   | Text        |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The rendered output looks like this:\n",
     "\n",
     "\n",
@@ -159,9 +273,14 @@
     "[LaTeX](https://en.wikipedia.org/wiki/LaTeX) is widely used in academia for the communication and publication of scientific documents in many fields.\n",
     "\n",
     "\n",
-    "Notation | Symbols | Example\n",
-    "---------------|:-----------------:|-------------\n",
-    "Fractions | `\\frac{}{}` | $P(A)=\\frac{n(A)}{n(U)}$\n",
+    "\n",
+    "## Fractions  \n",
+    "\n",
+    "`\\frac{}{}`  \n",
+    "\n",
+    "`$P(A)=\\frac{n(A)}{n(U)}$`\n",
+    "\n",
+    "$P(A)=\\frac{n(A)}{n(U)}$\n",
     "\n",
     "\n",
     "\n",
@@ -187,6 +306,13 @@
     "## Text\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "$P(A)=\\frac{n(A)}{n(U)}$"
    ]
   },
   {
@@ -278,6 +404,39 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reset css and font defaults in:\r\n",
+      "/Users/shinokada/.jupyter/custom &\r\n",
+      "/Users/shinokada/Library/Jupyter/nbextensions\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jt -r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -296,7 +455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
